--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -28,6 +28,7 @@
                 style="@style/robotoButtonStyle"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:minHeight="0dp"
                 android:text="@string/button_stop"
                 android:textAllCaps="false" />
@@ -63,6 +64,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginBottom="2dp"
                 android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
                 android:text="@string/resolution"
                 android:textAlignment="center" />
@@ -79,6 +81,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginBottom="2dp"
                 android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
                 android:text="@string/t" />
 
