--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,8 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:gravity="start" />
 
         <TextView
@@ -37,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textview_header_strokewidth"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:fontFamily="sans-serif-light"
             android:gravity="start" />
     </RelativeLayout>
@@ -55,8 +58,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:gravity="start" />
 
         <TextView
@@ -66,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textview_header_gridlines"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:fontFamily="sans-serif-light"
             android:gravity="start" />
     </RelativeLayout>
