--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,32 +12,38 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/menu_action_demo"
+        android:id="@+id/menu_action_console"
         android:orderInCategory="91"
+        android:title="@string/action_console"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_action_demo"
+        android:orderInCategory="92"
         android:title="@string/action_demo"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_action_settings"
-        android:orderInCategory="92"
+        android:orderInCategory="93"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_action_store"
-        android:orderInCategory="93"
+        android:orderInCategory="94"
         android:title="@string/action_store"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_action_load"
-        android:orderInCategory="93"
+        android:orderInCategory="95"
         android:title="@string/action_load"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_action_about"
-        android:orderInCategory="93"
+        android:orderInCategory="96"
         android:title="@string/action_about"
         app:showAsAction="never" />
 
