--- a/app/src/main/res/layout/console_list_row.xml
+++ b/app/src/main/res/layout/console_list_row.xml
@@ -1,40 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
 
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:layout_marginTop="1dp"
-    android:layout_marginBottom="1dp"
 
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp">
 
-    <TextView
-        android:id="@+id/textview_x"
+<!--<RelativeLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="#FFFFFF"-->
+
+    <!--android:layout_marginLeft="15dp"-->
+    <!--android:layout_marginRight="15dp"-->
+    <!--android:layout_marginTop="1dp"-->
+    <!--android:layout_marginBottom="1dp"-->
+
+    <!--android:paddingTop="5dp"-->
+    <!--android:paddingBottom="5dp"-->
+    <!--android:paddingLeft="5dp"-->
+    <!--android:paddingRight="5dp">-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/textview_counter"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_marginRight="6dip"-->
+        <!--android:text="counter"-->
+        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/textview_y"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="26dip"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_toRightOf="@id/textview_counter"-->
+        <!--android:ellipsize="marquee"-->
+        <!--android:maxLines="1"-->
+        <!--android:text="YYY"-->
+        <!--android:textSize="12sp"-->
+        <!--android:textAppearance="?android:attr/textAppearanceSmall"/>-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/imageview_dottedline"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="5dp"-->
+        <!--android:layout_above="@id/textview_y"-->
+        <!--android:layout_toRightOf="@id/textview_counter"-->
+        <!--android:layerType="software"-->
+        <!--android:src="@drawable/dotted" />-->
+
+
+    <!--<TextView-->
+        <!--android:id="@+id/textview_x"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+
+        <!--android:layout_above="@id/imageview_dottedline"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_toRightOf="@id/textview_counter"-->
+
+        <!--android:text="XXX"-->
+
+        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
+
+
+
+
+<!--</RelativeLayout>-->
+
+
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
 
-    <ImageView
-        android:id="@+id/imageview_dottedline"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_below="@+id/textview_x"
-        android:layerType="software"
-        android:src="@drawable/dotted" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
 
-    <TextView
-        android:id="@+id/textview_y"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageview_dottedline"
-        android:textAppearance="?android:attr/textAppearanceSmall"/>
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
+
+        <TextView
+            android:id="@+id/textview_counter"
+            android:background="@color/material_blue_A200"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="6dip"
+            android:text="counter"
+            android:textAlignment="center"
+            android:gravity="fill_vertical"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/textview_x"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/textview_counter"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <ImageView
+            android:id="@+id/imageview_dottedline"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_below="@+id/textview_x"
+            android:layout_toRightOf="@id/textview_counter"
+            android:layerType="software"
+            android:src="@drawable/dotted" />
+
+        <TextView
+            android:id="@+id/textview_y"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageview_dottedline"
+            android:layout_toRightOf="@id/textview_counter"
+            android:textAppearance="?android:attr/textAppearanceSmall"/>
+
 </RelativeLayout>
+
