--- a/app/src/main/res/layout/console_list_row.xml
+++ b/app/src/main/res/layout/console_list_row.xml
@@ -1,111 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryDark">
 
-
-
-<!--<RelativeLayout-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:background="#FFFFFF"-->
-
-    <!--android:layout_marginLeft="15dp"-->
-    <!--android:layout_marginRight="15dp"-->
-    <!--android:layout_marginTop="1dp"-->
-    <!--android:layout_marginBottom="1dp"-->
-
-    <!--android:paddingTop="5dp"-->
-    <!--android:paddingBottom="5dp"-->
-    <!--android:paddingLeft="5dp"-->
-    <!--android:paddingRight="5dp">-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textview_counter"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginRight="6dip"-->
-        <!--android:text="counter"-->
-        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/textview_y"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="26dip"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_toRightOf="@id/textview_counter"-->
-        <!--android:ellipsize="marquee"-->
-        <!--android:maxLines="1"-->
-        <!--android:text="YYY"-->
-        <!--android:textSize="12sp"-->
-        <!--android:textAppearance="?android:attr/textAppearanceSmall"/>-->
-
-    <!--<ImageView-->
-        <!--android:id="@+id/imageview_dottedline"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="5dp"-->
-        <!--android:layout_above="@id/textview_y"-->
-        <!--android:layout_toRightOf="@id/textview_counter"-->
-        <!--android:layerType="software"-->
-        <!--android:src="@drawable/dotted" />-->
-
-
-    <!--<TextView-->
-        <!--android:id="@+id/textview_x"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-
-        <!--android:layout_above="@id/imageview_dottedline"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_toRightOf="@id/textview_counter"-->
-
-        <!--android:text="XXX"-->
-
-        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
-
-
-
-
-<!--</RelativeLayout>-->
-
-
-
+    <!-- this nested layout is necessary, because it's used inside a listview widget -->
+    <!-- (listview widgets are using AbsListView.LayoutParams, -->
+    <!-- therefore properties like layout_marginBottom don't work there) -->
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@color/material_blue_700"
 
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+        android:padding="5dp"
+        android:layout_marginBottom="50dp">
 
         <TextView
             android:id="@+id/textview_counter"
             android:background="@color/material_blue_A200"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
+
             android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
             android:layout_marginRight="6dip"
-            android:text="counter"
+            android:text="100"
+
+            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
+
             android:textAlignment="center"
-            android:gravity="fill_vertical"
+            android:gravity="fill"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
             android:id="@+id/textview_x"
+            android:background="@color/material_red_700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@id/textview_counter"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -121,11 +57,16 @@
 
         <TextView
             android:id="@+id/textview_y"
+            android:background="@color/material_red_700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
             android:layout_below="@+id/imageview_dottedline"
             android:layout_toRightOf="@id/textview_counter"
+            android:layout_alignParentBottom="true"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
 
